--- a/index.html
+++ b/index.html
@@ -208,16 +208,15 @@
                         <input type="text" name="Name" placeholder="Your Name" required>
                         <input type="tel" name="Contact No" placeholder="Contact No" required>
                         <textarea name="Message" rows="6" placeholder="Reason"></textarea>
-                        <button type="submit" class="btn btn2">Submit</button>
+                        <button type="submit" id="msg" class="btn btn2">Submit</button>
                     </form>
-                    <span id="msg">Your response has recorded </span>
                 </div>
             </div>
         </div>
     </div>
 
     <div class="copyright">
-        <p>Copyright © Sanjay. Made with <i class="fa-solid fa-heart" style="color: #ff0000;"></i> by Kushagra</p>
+        <p>Copyright © Sanjay. Made by Kushagra</p>
     </div>
 
     <script src="java.js"></script>
