Some changes in js

--- a/index.html
+++ b/index.html
@@ -208,8 +208,10 @@
                         <input type="text" name="Name" placeholder="Your Name" required>
                         <input type="tel" name="Contact No" placeholder="Contact No" required>
                         <textarea name="Message" rows="6" placeholder="Reason"></textarea>
-                        <button type="submit" id="msg" class="btn btn2">Submit</button>
+                        <button type="submit" id="ms" class="btn btn2">Submit</button>
                     </form>
+                    <span id="msg">
+                    </span>
                 </div>
             </div>
         </div>
