--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <ul>
                     <li><a class="h" href="#header">Home</a></li>
                     <li><a class="a" href="#about">About</a></li>
+                    <li><a class="a" href="#specialization">Specialization</a></li>
                     <li><a class="t" href="#team">Team</a></li>
                     <li class="con"><a class="c" href="#contact">Contact</a></li>
                 </ul>
@@ -46,7 +47,7 @@
                 </p>
             </div>
 
-            <div class="expert">
+            <div class="expert" id="specialization">
                 <div class="specialization">
                     <h1 class="title">Specialization</h1>
                     <div class="ulll">
@@ -134,7 +135,7 @@
                 <div class="left">
                     <div class="ad">
                         <img src="mor.jpg" class="adv">
-                        <div class="il">Adv Varun Tyagi<br><br><span class="male">L.L.B</span></div>                        
+                        <div class="il">Adv Chanchal Gupta<br><br><span class="male">L.L.B   L.L.M</span></div>                        
                     </div>
                     <div class="ad">
                         <img src="mor.jpg" class="adv">
@@ -142,29 +143,7 @@
                     </div>
                     <div class="ad">
                         <img src="mor.jpg" class="adv">
-                        <div class="il">Adv Ravinder Jain<br><br><span class="male">L.L.B</span></div>
-                    </div>
-                    <div class="ad">
-                        <img src="mor.jpg" class="adv">
-                        <div class="il">Adv Rajat Jain<br><br><span class="male">L.L.B</span></div>
-                    </div>
-                    <div class="ad">
-                        <img src="mor.jpg" class="adv">
-                        <div class="il">Adv Insaff Ali<br><br><span class="male">L.L.B</span></div>
-                    </div>
-                    <div class="ad">
-                        <img src="mor.jpg" class="adv">
-                        <div class="il">Adv Insaff Ali<br><br><span class="male">L.L.B</span></div>
-                    </div>
-                </div>
-                <div class="right">
-                    <div class="ad">
-                        <img src="mor.jpg" class="adv">
-                        <div class="il">Adv Chanchal Gupta<br><br><span class="male">L.L.B   L.L.M</span></div>                        
-                    </div>
-                    <div class="ad">
-                        <img src="mor.jpg" class="adv">
-                        <div class="il">Adv Aasha Sharma<br><br><span class="male">L.L.B</span></div>                       
+                        <div class="il">Adv Varun Tyagi<br><br><span class="male">L.L.B</span></div>                        
                     </div>
                     <div class="ad">
                         <img src="mor.jpg" class="adv">
@@ -172,7 +151,30 @@
                     </div>
                     <div class="ad">
                         <img src="mor.jpg" class="adv">
+                        <div class="il">Adv Ravinder Jain<br><br><span class="male">L.L.B</span></div>
+                    </div>
+                    
+                    <div class="ad">
+                        <img src="mor.jpg" class="adv">
+                        <div class="il">Adv Gaurav Bhatnagar<br><br><span class="male">L.L.B</span></div>
+                    </div>
+                </div>
+                <div class="right">
+                    <div class="ad">
+                        <img src="mor.jpg" class="adv">
+                        <div class="il">Adv Aasha Sharma<br><br><span class="male">L.L.B</span></div>                       
+                    </div>
+                    <div class="ad">
+                        <img src="mor.jpg" class="adv">
+                        <div class="il">Adv Insaff Ali<br><br><span class="male">L.L.B</span></div>
+                    </div>
+                    <div class="ad">
+                        <img src="mor.jpg" class="adv">
                         <div class="il">Adv Simran Keshar<br><br><span class="male">L.L.B</span></div>                        
+                    </div>
+                    <div class="ad">
+                        <img src="mor.jpg" class="adv">
+                        <div class="il">Adv Rajat Jain<br><br><span class="male">L.L.B</span></div>
                     </div>
                     <div class="ad">
                         <img src="mor.jpg" class="adv">
@@ -193,9 +195,10 @@
             <div class="war">
                 <div class="contact-left">
                     
-                    <p><i class="fa-solid fa-paper-plane"></i>contact@example.com</p>
+                    <p><i class="fa-solid fa-paper-plane"></i>sanjay913913@gmail.com</p>
                     <p><i class="fa-solid fa-phone"></i>9310-913-913</p>
                     <p><i class="fa-solid fa-phone"></i>9313-913-913</p>
+                    <p><i class="fa-solid fa-house"></i>Chamber no. 913</p> <span class="ko">-----------,</span><span class="mo">Civil Court Compound</span><br><span class="ko">-----------,</span><span class="mo">Rajnagar , Ghaziabad</span>   
                     <div class="social-icons">
                         <a href="#"><i class="fa-brands fa-facebook"></i></a>
                         <a href="#"><i class="fa-brands fa-instagram"></i></i></a>
@@ -218,7 +221,7 @@
     </div>
 
     <div class="copyright">
-        <p>Copyright © Sanjay. Made by Kushagra</p>
+        <p>Copyright © Sanjay</p>
     </div>
 
     <script src="java.js"></script>
